--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,7 @@
 <section>
     <div class="featured-container">
         <div class="featured-text">
-            <h1>Best Selling Products:</h1>
+            <h1>Products we are proud of:</h1>
         </div>
         <div class="featured-items">
             <% for (const category of data.categories) { %>
