--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,7 +8,7 @@
              <a href="/home"><span class="logo-txt">TELDOR</span></a>
          </div>
          <div class="links">
-             <div class="nav-item"><a href="/home">Home</a></div>
+             <div class="nav-item"><a href="/">Home</a></div>
              <div class="nav-item"><a href="/categories/all">Categories</a></div>
              <div class="nav-item"><a href="#">Account</a></div>
              <div class="nav-item"><a href="#">Cart</a></div>
