--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,7 @@
     <nav>
      <div class="navbar">
          <div class="logo">
-             <a href="/home">
+             <a href="/">
                  <img width="95px" height="75px" src="https://www.onlinelogomaker.com/blog/wp-content/uploads/2017/11/furniture-logo.jpg" alt="TELDOR">
              </a>
              <a href="/home"><span class="logo-txt">TELDOR</span></a>
